--- a/Rock-Paper-Scissor/rock-paper-scissor.html
+++ b/Rock-Paper-Scissor/rock-paper-scissor.html
@@ -8,10 +8,12 @@
 <body>
     <p>Rock Paper Scissor</p>
 
-    <button>Rock</button>
+    <button onclick=
+    "const randomNumber = Math.random();"
+    >Rock</button>
     <button>Paper</button>
     <button>Scissor</button>
-    
+
     <script>
 
     </script>
