--- a/Boolean/01-booleans.html
+++ b/Boolean/01-booleans.html
@@ -14,6 +14,10 @@
         } else {
             console.log('You can not drive');
         }
+
+        console.log(true && false); // && = AND
+        console.log(true || false); // || = OR -> as long as one side is true
+        console.log(!true);         // ! = NOT OPERATOR -> flip the operator
     </script>
 </body>
 </html>
