--- a/Rock-Paper-Scissor/rock-paper-scissor.html
+++ b/Rock-Paper-Scissor/rock-paper-scissor.html
@@ -9,8 +9,32 @@
     <p>Rock Paper Scissor</p>
 
     <button onclick=
-    "const randomNumber = Math.random();"
-    >Rock</button>
+    "const randomNumber = Math.random();
+
+    let computerMove = '';
+
+        if (randomNumber >= 0 && randomNumber < 1 / 3) {
+            computerMove = 'rock';
+        } else if (randomNumber >= 1 / 3 && random < 2 / 3) {
+            computerMove = 'paper';
+        } else if (randomNumber >= 2 / 3 && randomNumber < 1) {
+            computerMove = 'Scissors';
+        }
+
+        console.log(computerMove);
+
+        let result = '';
+
+        if (computerMove === 'rock') {
+            result = 'Tie.';
+        } else if (computerMove === 'paper') {
+            result = 'You Lose.';
+        } else if (computerMove === 'scissors') {
+            result = 'You win.'
+        }
+
+        alert('You picked rock. Computer picked paper. You lose.');
+    ">Rock</button>
     <button>Paper</button>
     <button>Scissor</button>
 
