--- a/Rock-Paper-Scissor/rock-paper-scissor.html
+++ b/Rock-Paper-Scissor/rock-paper-scissor.html
@@ -21,8 +21,6 @@
             computerMove = 'Scissors';
         }
 
-        console.log(computerMove);
-
         let result = '';
 
         if (computerMove === 'rock') {
@@ -33,9 +31,34 @@
             result = 'You win.'
         }
 
-        alert('You picked rock. Computer picked paper. You lose.');
+        alert(`You picked rock. Computer picked ${computerMove}. ${result}`);
     ">Rock</button>
-    <button>Paper</button>
+
+    <button onclick=
+    "const randomNumber = Math.random();
+
+    let computerMove = '';
+
+        if (randomNumber >= 0 && randomNumber < 1 / 3) {
+            computerMove = 'rock';
+        } else if (randomNumber >= 1 / 3 && random < 2 / 3) {
+            computerMove = 'paper';
+        } else if (randomNumber >= 2 / 3 && randomNumber < 1) {
+            computerMove = 'Scissors';
+        }
+
+        let result = '';
+
+        if (computerMove === 'rock') {
+            result = 'You Win.';
+        } else if (computerMove === 'paper') {
+            result = 'Tie.';
+        } else if (computerMove === 'scissors') {
+            result = 'You lose.'
+        }
+
+        alert(`You picked paper. Computer picked ${computerMove}. ${result}`);
+    ">Paper</button>
     <button>Scissor</button>
 
     <script>
