--- a/Rock-Paper-Scissor/rock-paper-scissor.html
+++ b/Rock-Paper-Scissor/rock-paper-scissor.html
@@ -8,61 +8,38 @@
 <body>
     <p>Rock Paper Scissor</p>
 
-    <button onclick=
-    "const randomNumber = Math.random();
-
-    let computerMove = '';
-
-        if (randomNumber >= 0 && randomNumber < 1 / 3) {
-            computerMove = 'rock';
-        } else if (randomNumber >= 1 / 3 && random < 2 / 3) {
-            computerMove = 'paper';
-        } else if (randomNumber >= 2 / 3 && randomNumber < 1) {
-            computerMove = 'Scissors';
-        }
-
-        let result = '';
-
-        if (computerMove === 'rock') {
-            result = 'Tie.';
-        } else if (computerMove === 'paper') {
-            result = 'You Lose.';
-        } else if (computerMove === 'scissors') {
-            result = 'You win.'
-        }
-
-        alert(`You picked rock. Computer picked ${computerMove}. ${result}`);
-    ">Rock</button>
-
-    <button onclick=
-    "const randomNumber = Math.random();
-
-    let computerMove = '';
-
-        if (randomNumber >= 0 && randomNumber < 1 / 3) {
-            computerMove = 'rock';
-        } else if (randomNumber >= 1 / 3 && random < 2 / 3) {
-            computerMove = 'paper';
-        } else if (randomNumber >= 2 / 3 && randomNumber < 1) {
-            computerMove = 'Scissors';
-        }
-
-        let result = '';
-
-        if (computerMove === 'rock') {
-            result = 'You Win.';
-        } else if (computerMove === 'paper') {
-            result = 'Tie.';
-        } else if (computerMove === 'scissors') {
-            result = 'You lose.'
-        }
-
-        alert(`You picked paper. Computer picked ${computerMove}. ${result}`);
-    ">Paper</button>
-    <button>Scissor</button>
+    <button onclick="playGame('rock')">Rock</button>
+    <button onclick="playGame('paper')">Paper</button>
+    <button onclick="playGame('scissors')">Scissor</button>
 
     <script>
+    function playGame(playerMove) {
+        const randomNumber = Math.random();
 
+        let computerMove = '';
+        if (randomNumber >= 0 && randomNumber < 1 / 3) {
+            computerMove = 'rock';
+        } else if (randomNumber >= 1 / 3 && randomNumber < 2 / 3) {
+            computerMove = 'paper';
+        } else {
+            computerMove = 'scissors';
+        }
+
+        let result = '';
+        if (playerMove === computerMove) {
+            result = 'Tie.';
+        } else if (
+            (playerMove === 'rock' && computerMove === 'scissors') ||
+            (playerMove === 'paper' && computerMove === 'rock') ||
+            (playerMove === 'scissors' && computerMove === 'paper')
+        ) {
+            result = 'You win.';
+        } else {
+            result = 'You lose.';
+        }
+
+        alert(`You picked ${playerMove}. Computer picked ${computerMove}. ${result}`);
+    }
     </script>
 </body>
 </html>
