--- a/Rock-Paper-Scissor/rock-paper-scissor.html
+++ b/Rock-Paper-Scissor/rock-paper-scissor.html
@@ -13,6 +13,9 @@
     <button onclick="playGame('scissors')">Scissor</button>
 
     <script>
+        // Scoring your Win, Losses, Ties
+    const score = JSON.parse(localStorage.getItem('score')); // JSON.parse Converting the string into object
+
     function playGame(playerMove) {
         const randomNumber = Math.random();
 
@@ -38,7 +41,26 @@
             result = 'You lose.';
         }
 
-        alert(`You picked ${playerMove}. Computer picked ${computerMove}. ${result}`);
+        // Updating the Win, Losses, Tie Value
+
+        if (result === 'You win.') {
+            score.wins += 1;
+        } else if (result === 'You lose.') {
+            score.losses +=1;
+        } else if (result === 'Tie.') {
+            score.ties += 1;
+        }
+
+        // Storing Scores in a local storage support only a string
+
+        localStorage.setItem('score', JSON.stringify(score)); // JSON.stringify will convert it into a string
+
+        alert(`You picked ${playerMove}. 
+        Computer picked ${computerMove}. ${result}
+        Wins: ${score.wins},
+        Losses: ${score.losses},
+        Ties: ${score.ties}
+        `);
     }
     </script>
 </body>
