--- a/Rock-Paper-Scissor/rock-paper-scissor.html
+++ b/Rock-Paper-Scissor/rock-paper-scissor.html
@@ -11,10 +11,18 @@
     <button onclick="playGame('rock')">Rock</button>
     <button onclick="playGame('paper')">Paper</button>
     <button onclick="playGame('scissors')">Scissor</button>
+    <button onclick="localStorage.removeItem('score'); location.reload();">Reset Score</button>
 
     <script>
         // Scoring your Win, Losses, Ties
-    const score = JSON.parse(localStorage.getItem('score')); // JSON.parse Converting the string into object
+    let score = JSON.parse(localStorage.getItem('score')); // JSON.parse Converting the string into object
+        if (score === null ) {
+            score = {
+                wins: 0,
+                losses: 0,
+                ties: 0
+            };
+        }
 
     function playGame(playerMove) {
         const randomNumber = Math.random();
