--- a/DOM/dom-projects.html
+++ b/DOM/dom-projects.html
@@ -15,15 +15,34 @@
     <a href="../Rock-Paper-Scissor/rock-paper-scissor01.html">Click Here</a>
 
     <p>Amazon Shipping Calculator</p>
-    <input placeholder="Cost of Order" class="js-cost-input">
-    <button onclick="
-        calculateTotal();
-    ">Calculate</button>
+
+    <input placeholder="Cost of Order" class="js-cost-input"
+    onkeydown="handleCostKeyDown(event);">
+
+    <button onclick="calculateTotal();">Calculate</button>
+    
+    <p class="js-total-cost"></p>
 
     <script>
-        function calculateTotal () {
-            document.querySelector('.js-cost-input');
+        function handleCostKeyDown (event) {
+            if (event.key === 'Enter') {
+                calculateTotal();
+            }
         }
+
+        function calculateTotal () {
+            const inputElement = document.querySelector('.js-cost-input');
+
+            let cost = Number(inputElement.value); // getting the value inside the input box(String) and if its a number add Number() to the inputelement
+
+            if (cost < 40) {
+                cost = cost + 10;
+            }
+
+            document.querySelector('.js-total-cost')
+                .innerHTML = `$${cost}`;
+        };
+
 
         function subscribe() {
         const buttonElement = document.querySelector(".js-subscribe-button");
@@ -32,7 +51,7 @@
             } else {
                 buttonElement.innerText = "Subscribe";
             }
-        }
+        };
     </script>
 </body>
 </html>
